force-app/main/default/objects/CA_Apolice__c/CA_Apolice__c.object-meta.xml
<CustomObject>
    <label>Apólice</label>
    <nameField>
        <label>Apólice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apólices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>