force-app/main/default/objects/CA_Apolice__c/fields/CA_Corretor__c.field-meta.xml
<CustomField>
    <fullName>CA_Corretor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corretor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ap_lices</relationshipName>
    <type>Lookup</type>
</CustomField>