force-app/main/default/objects/CA_Apolice__c/fields/CA_DataInicio__c.field-meta.xml
<CustomField>
    <fullName>CA_DataInicio__c</fullName>
    <label>Data de Início</label>
    <type>Date</type>
</CustomField>