force-app/main/default/objects/CA_Apolice__c/fields/CA_DataTermino__c.field-meta.xml
<CustomField>
    <fullName>CA_DataTermino__c</fullName>
    <label>Data de Término</label>
    <type>Date</type>
</CustomField>