force-app/main/default/objects/CA_Apolice__c/fields/CA_Imovel__c.field-meta.xml
<CustomField>
    <fullName>CA_Imovel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imóvel</label>
    <referenceTo>CA_Imovel__c</referenceTo>
    <relationshipLabel>Apólices</relationshipLabel>
    <relationshipName>Ap_lices</relationshipName>
    <type>Lookup</type>
</CustomField>