force-app/main/default/objects/CA_Apolice__c/fields/CA_InicioApolice__c.field-meta.xml
<CustomField>
    <fullName>CA_InicioApolice__c</fullName>
    <label>Inicio da apólice</label>
    <type>Date</type>
</CustomField>