force-app/main/default/objects/CA_Apolice__c/fields/CA_Mes__c.field-meta.xml
<CustomField>
    <fullName>CA_Mes__c</fullName>
    <label>Mês</label>
    <length>255</length>
    <type>Text</type>
</CustomField>