force-app/main/default/objects/CA_Apolice__c/fields/CA_NApolice__c.field-meta.xml
<CustomField>
    <fullName>CA_NApolice__c</fullName>
    <label>Nº da apólice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>