force-app/main/default/objects/CA_Apolice__c/fields/CA_Nparcela__c.field-meta.xml
<CustomField>
    <fullName>CA_Nparcela__c</fullName>
    <label>nº da parcela</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>