force-app/main/default/objects/CA_Apolice__c/fields/CA_NumeroApolice__c.field-meta.xml
<CustomField>
    <fullName>CA_NumeroApolice__c</fullName>
    <label>Número da Apólice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>