force-app/main/default/objects/CA_Apolice__c/fields/CA_Observacoes__c.field-meta.xml
<CustomField>
    <fullName>CA_Observacoes__c</fullName>
    <label>Observações</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>