force-app/main/default/objects/CA_Apolice__c/fields/CA_Segurado__c.field-meta.xml
<CustomField>
    <fullName>CA_Segurado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segurado</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Apólices (Segurado)</relationshipLabel>
    <relationshipName>Ap_lices1</relationshipName>
    <type>Lookup</type>
</CustomField>