force-app/main/default/objects/CA_Apolice__c/fields/CA_Seguradora__c.field-meta.xml
<CustomField>
    <fullName>CA_Seguradora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seguradora</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Apólices</relationshipLabel>
    <relationshipName>Ap_lices</relationshipName>
    <type>Lookup</type>
</CustomField>