force-app/main/default/objects/CA_Apolice__c/fields/CA_Situacao__c.field-meta.xml
<CustomField>
    <fullName>CA_Situacao__c</fullName>
    <label>Situação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>