force-app/main/default/objects/CA_Apolice__c/fields/CA_TerminoApolice__c.field-meta.xml
<CustomField>
    <fullName>CA_TerminoApolice__c</fullName>
    <label>Termino da apólice</label>
    <type>Date</type>
</CustomField>