force-app/main/default/objects/CA_Apolice__c/fields/CA_TipoApolice__c.field-meta.xml
<CustomField>
    <fullName>CA_TipoApolice__c</fullName>
    <label>Tipo de Apólice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>