force-app/main/default/objects/CA_Apolice__c/fields/CA_TipoSeguro__c.field-meta.xml
<CustomField>
    <fullName>CA_TipoSeguro__c</fullName>
    <label>Tipo de Seguro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>