force-app/main/default/objects/CA_Apolice__c/fields/CA_ValorParcela__c.field-meta.xml
<CustomField>
    <fullName>CA_ValorParcela__c</fullName>
    <label>Valor da parcela</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>