force-app/main/default/objects/CA_Apolice__c/fields/CA_ValorSegurado__c.field-meta.xml
<CustomField>
    <fullName>CA_ValorSegurado__c</fullName>
    <label>Valor segurado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>