force-app/main/default/objects/CA_Apolice__c/fields/CA_ValorTotal__c.field-meta.xml
<CustomField>
    <fullName>CA_ValorTotal__c</fullName>
    <label>Valor Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>