force-app/main/default/objects/CA_Apolice__c/listViews/CA_TodasApolices.listView-meta.xml
<ListView>
    <fullName>CA_TodasApolices</fullName>
    <columns>NAME</columns>
    <columns>CA_TipoApolice__c</columns>
    <columns>CA_Situacao__c</columns>
    <columns>CA_Seguradora__c</columns>
    <columns>CA_ValorSegurado__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas Apólices</label>
</ListView>